Begin refactoring of SQL export

--- a/SpellGUIV2/ImportExportWindow.xaml
+++ b/SpellGUIV2/ImportExportWindow.xaml
@@ -27,11 +27,7 @@
     </controls:MetroWindow.Flyouts>
     <Grid>
         <TabControl Name="MainTabControl" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,10">
-            <TabItem>
-                <TabItem.Header>
-                    <Label Content="{DynamicResource butImportExportWindowImport}" 
-                           MouseLeftButtonDown="TabClick"/>
-                </TabItem.Header>
+            <TabItem Header="{DynamicResource butImportExportWindowImport}">
                 <Grid Name="ImportGrid">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="AUTO"/>
@@ -57,11 +53,7 @@
                     </ScrollViewer>
                 </Grid>
             </TabItem>
-            <TabItem>
-                <TabItem.Header>
-                    <Label Content="{DynamicResource butImportExportWindowExport}" 
-                           MouseLeftButtonDown="TabClick"/>
-                </TabItem.Header>
+            <TabItem Header="{DynamicResource butImportExportWindowExport}">
                 <Grid Name="ExportGrid" Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="AUTO"/>
@@ -78,9 +70,8 @@
                     </Grid.RowDefinitions>
                     <Button Name="ExportClickBtn1" Content="{DynamicResource ExportCheckedFiles}" Margin="10" Click="ExportClick" Grid.Row="0" Grid.Column="0"/>
                     <Button Name="ExportClickBtn2" Content="{DynamicResource ExportCheckedFilesMpq}" Margin="10" Click="MpqClick" Grid.Row="0" Grid.Column="1"/>
-                    <Button Name="ExportClickBtn3" Content="{DynamicResource ExportCheckedFilesSql}" Margin="10" Click="SqlClick" Grid.Row="1" Grid.Column="0"/>
-                    <Label Content="{DynamicResource ExportMpqName}" HorizontalAlignment="Left" Margin="5" Grid.Row="1" Grid.Column="1"/>
-                    <TextBox Name="ExportMpqNameTxt" Text="patch-4.mpq" HorizontalAlignment="Stretch" Margin="10,5,10,5" Grid.Row="1" Grid.Column="1"/>
+                    <Label Content="{DynamicResource ExportMpqName}" HorizontalAlignment="Right" Margin="5" Grid.Row="1" Grid.Column="0"/>
+                    <TextBox Name="ExportMpqNameTxt" Text="patch-4.mpq" Margin="10,5,10,5" Grid.Row="1" Grid.Column="1"/>
                     <Label Content="{DynamicResource TablesToExport}" Margin="5" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"/>
                     <Label Name="ExportLoadedCount" Margin="5" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center"/>
                     <CheckBox Name="ExportSelectAll" Content="Select All" Margin="5" Grid.Row="0" Grid.Column="3" Checked="SelectAllChanged" Unchecked="SelectAllChanged"/>
