--- a/SpellGUIV2/ImportExportWindow.xaml
+++ b/SpellGUIV2/ImportExportWindow.xaml
@@ -9,7 +9,9 @@
         Icon="icon.ico"
         Loaded="_Loaded"
         BorderBrush="#1585B5"
-        BorderThickness="2">
+        BorderThickness="2"
+        Width="{Binding ActualWidth, ElementName=MainTabControl, Mode=OneWay}"
+        >
     <controls:MetroWindow.Resources>
         <ResourceDictionary>
             <Style TargetType="c:ThreadSafeComboBox" BasedOn="{StaticResource {x:Type ComboBox}}"/>
@@ -26,7 +28,11 @@
     </controls:MetroWindow.Flyouts>
     <Grid>
         <TabControl Name="MainTabControl" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,10">
-            <TabItem Header="{DynamicResource butImportExportWindowImport}">
+            <TabItem>
+                <TabItem.Header>
+                    <Label Content="{DynamicResource butImportExportWindowImport}" 
+                           MouseLeftButtonDown="TabClick"/>
+                </TabItem.Header>
                 <Grid Name="ImportGrid">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="AUTO"/>
@@ -52,7 +58,11 @@
                     </ScrollViewer>
                 </Grid>
             </TabItem>
-            <TabItem Header="{DynamicResource butImportExportWindowExport}">
+            <TabItem>
+                <TabItem.Header>
+                    <Label Content="{DynamicResource butImportExportWindowExport}" 
+                           MouseLeftButtonDown="TabClick"/>
+                </TabItem.Header>
                 <Grid Name="ExportGrid" Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="AUTO"/>
