--- a/Documentation/Languages/frFR.xaml
+++ b/Documentation/Languages/frFR.xaml
@@ -464,6 +464,7 @@
 		Nécessite une baguette |
 		Inconnu 23 |
 		Nécessite une main gauche |
+		Treat as Periodic |
 		Can Proc with Triggered |
 		Drain d'âme |
 		Inconnu 28 |
