--- a/Documentation/Languages/zhCN.xaml
+++ b/Documentation/Languages/zhCN.xaml
@@ -464,6 +464,7 @@
         需要魔杖 |
         Unknown 23 |
         需要空手 |
+        Treat as Periodic |
         Can Proc with Triggered |
         Drain Soul |
         Unknown 28 |
