--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -497,7 +497,7 @@
                                 <TabItem Header="{DynamicResource SpellEffects1}">
                                     <Grid>
                                         <Label Content="{DynamicResource labSpellEffect}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,41,0,0"/>
-                                        <c2:ThreadSafeComboBox x:Name="SpellEffect1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,41,0,0" Width="300" SelectionChanged="ComboBox_SelectionChanged"/>
+                                        <c2:FilteredComboBox x:Name="SpellEffect1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,41,0,0" Width="300" SelectionChanged="ComboBox_SelectionChanged"/>
                                         <Label Content="{DynamicResource labBasePoints}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,73,0,0"/>
                                         <c2:ThreadSafeTextBox x:Name="BasePoints1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,73,0,0" Width="300" TextWrapping="Wrap"/>
                                         <Label Content="{DynamicResource labDieSides}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,103,0,0"/>
@@ -513,7 +513,7 @@
                                         <Label Content="{DynamicResource labRadius}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,259,0,0"/>
                                         <c2:ThreadSafeComboBox x:Name="RadiusIndex1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,259,0,0" Width="300" SelectionChanged="ComboBox_SelectionChanged"/>
                                         <Label Content="{DynamicResource labApplyAuraName}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,290,0,0"/>
-                                        <c2:ThreadSafeComboBox x:Name="ApplyAuraName1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,290,0,0" Width="300"/>
+                                        <c2:FilteredComboBox x:Name="ApplyAuraName1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,290,0,0" Width="300"/>
                                         <Label Content="{DynamicResource labAmplitude}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,321,0,0"/>
                                         <c2:ThreadSafeTextBox x:Name="Amplitude1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,321,0,0" Width="300" TextWrapping="Wrap"/>
                                         <Label Content="{DynamicResource labMultipleValue}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,351,0,0"/>
@@ -549,7 +549,7 @@
                                 <TabItem Header="{DynamicResource SpellEffects2}">
                                     <Grid>
                                         <Label Content="{DynamicResource labSpellEffect}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,41,0,0"/>
-                                        <c2:ThreadSafeComboBox x:Name="SpellEffect2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,41,0,0" Width="300" SelectionChanged="ComboBox_SelectionChanged"/>
+                                        <c2:FilteredComboBox x:Name="SpellEffect2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,41,0,0" Width="300" SelectionChanged="ComboBox_SelectionChanged"/>
                                         <Label Content="{DynamicResource labBasePoints}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,73,0,0"/>
                                         <c2:ThreadSafeTextBox x:Name="BasePoints2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,73,0,0" Width="300" TextWrapping="Wrap"/>
                                         <Label Content="{DynamicResource labDieSides}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,103,0,0"/>
@@ -565,7 +565,7 @@
                                         <Label Content="{DynamicResource labRadius}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,259,0,0"/>
                                         <c2:ThreadSafeComboBox x:Name="RadiusIndex2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,259,0,0" Width="300" SelectionChanged="ComboBox_SelectionChanged"/>
                                         <Label Content="{DynamicResource labApplyAuraName}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,290,0,0"/>
-                                        <c2:ThreadSafeComboBox x:Name="ApplyAuraName2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,290,0,0" Width="300"/>
+                                        <c2:FilteredComboBox x:Name="ApplyAuraName2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,290,0,0" Width="300"/>
                                         <Label Content="{DynamicResource labAmplitude}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,321,0,0"/>
                                         <c2:ThreadSafeTextBox x:Name="Amplitude2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,321,0,0" Width="300" TextWrapping="Wrap"/>
                                         <Label Content="{DynamicResource labMultipleValue}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,351,0,0"/>
@@ -601,7 +601,7 @@
                                 <TabItem Header="{DynamicResource SpellEffects3}">
                                     <Grid>
                                         <Label Content="{DynamicResource labSpellEffect}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,41,0,0"/>
-                                        <c2:ThreadSafeComboBox x:Name="SpellEffect3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,41,0,0" Width="300" SelectionChanged="ComboBox_SelectionChanged"/>
+                                        <c2:FilteredComboBox x:Name="SpellEffect3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,41,0,0" Width="300" SelectionChanged="ComboBox_SelectionChanged"/>
                                         <Label Content="{DynamicResource labBasePoints}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,73,0,0"/>
                                         <c2:ThreadSafeTextBox x:Name="BasePoints3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,73,0,0" Width="300" TextWrapping="Wrap"/>
                                         <Label Content="{DynamicResource labDieSides}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,103,0,0"/>
@@ -617,7 +617,7 @@
                                         <Label Content="{DynamicResource labRadius}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,259,0,0"/>
                                         <c2:ThreadSafeComboBox x:Name="RadiusIndex3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,259,0,0" Width="300" SelectionChanged="ComboBox_SelectionChanged"/>
                                         <Label Content="{DynamicResource labApplyAuraName}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,290,0,0"/>
-                                        <c2:ThreadSafeComboBox x:Name="ApplyAuraName3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,290,0,0" Width="300"/>
+                                        <c2:FilteredComboBox x:Name="ApplyAuraName3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,290,0,0" Width="300"/>
                                         <Label Content="{DynamicResource labAmplitude}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,321,0,0"/>
                                         <c2:ThreadSafeTextBox x:Name="Amplitude3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="152,321,0,0" Width="300" TextWrapping="Wrap"/>
                                         <Label Content="{DynamicResource labMultipleValue}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,351,0,0"/>
