--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -21,6 +21,7 @@
             <Style TargetType="c2:ListContextMenu" BasedOn="{StaticResource {x:Type ContextMenu}}"/>
             <Style TargetType="c2:SyntaxHighlightBox" BasedOn="{StaticResource {x:Type RichTextBox}}"/>
             <Style TargetType="c:SpellSelectionList" BasedOn="{StaticResource {x:Type ListBox}}"/>
+            <Style TargetType="c:GemSelectionList" BasedOn="{StaticResource {x:Type ListBox}}"/>
         </ResourceDictionary>
     </controls:MetroWindow.Resources>
     <controls:MetroWindow.Flyouts>
@@ -1309,6 +1310,42 @@
                     </TabItem>
                 </TabControl>
             </TabItem>
+          <TabItem Name="GemTab" Header="Gems">
+            <Grid>
+              <Grid.RowDefinitions>
+                <RowDefinition Height="AUTO"/>
+                <RowDefinition Height="AUTO"/>
+                <RowDefinition Height="AUTO"/>
+                <RowDefinition Height="AUTO"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+              </Grid.RowDefinitions>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="AUTO"/>
+                <ColumnDefinition Width="AUTO"/>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="260"/>
+                <ColumnDefinition Width="110"/>
+                <ColumnDefinition Width="270"/>
+              </Grid.ColumnDefinitions>
+              <Label Content="{DynamicResource labFilterBtName}" Margin="5" Grid.Row="0" Grid.Column="2"/>
+              <c2:ThreadSafeTextBox x:Name="FilterGemNames" HorizontalAlignment="Left" Margin="5" Width="200" TextWrapping="NoWrap" KeyDown="_KeyDown" KeyUp="_KeyUp" Grid.Row="0" Grid.Column="3"/>
+              <c:GemSelectionList x:Name="SelectGemList"
+                 Margin="10,10,0,10"
+                 VirtualizingStackPanel.IsVirtualizing="True"
+                 VirtualizingStackPanel.VirtualizationMode="Recycling"
+                 Width="400"
+                 Focusable="False"
+                 Grid.Row="0"
+                 Grid.RowSpan="6"
+                 Grid.Column="0"
+                 Grid.ColumnSpan="2"/>
+              <Label Content="Selected GemId:" Margin="5" Grid.Row="1" Grid.Column="2"/>
+              <Label x:Name="SelectedGemIdTxt" Content="0" Margin="5" Grid.Row="1" Grid.Column="3"/>
+              <Label Content="Gem Type:" Margin="5" Grid.Row="2" Grid.Column="2"/>
+              <c2:ThreadSafeComboBox x:Name="GemTypeBox" Margin="5" Width="150" Grid.Row="2" Grid.Column="3" HorizontalAlignment="LEFT"/>
+            </Grid>
+          </TabItem>
         </TabControl>
     </Grid>
     <controls:MetroWindow.RightWindowCommands>
