--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -1322,6 +1322,9 @@
                 <RowDefinition Height="AUTO"/>
                 <RowDefinition Height="AUTO"/>
                 <RowDefinition Height="AUTO"/>
+                <RowDefinition Height="AUTO"/>
+                <RowDefinition Height="AUTO"/>
+                <RowDefinition Height="AUTO"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
               </Grid.RowDefinitions>
@@ -1335,6 +1338,10 @@
               </Grid.ColumnDefinitions>
               <Label Content="{DynamicResource labFilterBtName}" Margin="5" Grid.Row="0" Grid.Column="2"/>
               <c2:ThreadSafeTextBox x:Name="FilterGemNames" HorizontalAlignment="Left" Margin="5" Width="180" TextWrapping="NoWrap" KeyDown="_KeyDown" KeyUp="_KeyUp" Grid.Row="0" Grid.Column="3"/>
+              <Label Content="Filter by Colour" Margin="5" Grid.Row="1" Grid.Column="2"/>
+              <c2:ThreadSafeComboBox x:Name="FilterGemBox" Margin="5" Width="180" Grid.Row="1" Grid.Column="3" HorizontalAlignment="LEFT"/>
+              <Label Content="Filter by Discoverable" Margin="5" Grid.Row="2" Grid.Column="2"/>
+              <c2:ThreadSafeComboBox x:Name="FilterGemDisc" Margin="5" Width="180" Grid.Row="2" Grid.Column="3" HorizontalAlignment="LEFT"/>
               <c:GemSelectionList x:Name="SelectGemList"
                  Margin="10,10,0,10"
                  VirtualizingStackPanel.IsVirtualizing="True"
@@ -1342,26 +1349,28 @@
                  Width="400"
                  Focusable="False"
                  Grid.Row="0"
-                 Grid.RowSpan="11"
+                 Grid.RowSpan="14"
                  Grid.Column="0"
                  Grid.ColumnSpan="2"/>
-              <Label Content="Selected Gem:" Margin="5" Grid.Row="1" Grid.Column="2"/>
-              <Label x:Name="SelectedGemIdTxt" Content="0" Margin="5" Grid.Row="1" Grid.Column="3"/>
-              <Button Name="SameGemChangesBtn" Content="Save Gem Changes" Grid.Row="2" Grid.Column="2" Margin="5,10,5,10" IsEnabled="false"/>
-              <Button Name="DuplicateGemBtn" Content="Duplicate to New Gem" Grid.Row="2" Grid.Column="3" Margin="5,10,5,10" IsEnabled="false"/>
-              <Button Name="DeleteGemBtn" Content="Delete Selected Gem" Grid.Row="2" Grid.Column="4" Margin="5,10,5,10" IsEnabled="false"/>
-              <Label Content="Enchantment Name:" Margin="5" Grid.Row="3" Grid.Column="2"/>
-              <c2:ThreadSafeTextBox x:Name="GemEnchantNameTxt" HorizontalAlignment="Left" Margin="5" Width="150" TextWrapping="NoWrap" Grid.Row="3" Grid.Column="3"/>
-              <Label Content="Gem Type:" Margin="5" Grid.Row="4" Grid.Column="2"/>
-              <c2:ThreadSafeComboBox x:Name="GemTypeBox" Margin="5" Width="150" Grid.Row="4" Grid.Column="3" HorizontalAlignment="LEFT" IsEnabled="false"/>
-              <Label Content="Gem Item Id:" Margin="5" Grid.Row="5" Grid.Column="2"/>
-              <c2:ThreadSafeTextBox x:Name="GemItemIdTxt" HorizontalAlignment="Left" Margin="5" Width="150" TextWrapping="NoWrap" Grid.Row="5" Grid.Column="3"/>
-              <Label Content="Trigger Spell:" Margin="5" Grid.Row="6" Grid.Column="2"/>
-              <c2:ThreadSafeTextBox x:Name="GemTriggerSpellTxt" HorizontalAlignment="Left" Margin="5" Width="150" TextWrapping="NoWrap" Grid.Row="6" Grid.Column="3"/>
-              <Label Content="Temp Learn Spell:" Margin="5" Grid.Row="7" Grid.Column="2"/>
-              <c2:ThreadSafeTextBox x:Name="GemTempLearnSpellTxt" HorizontalAlignment="Left" Margin="5" Width="150" TextWrapping="NoWrap" Grid.Row="7" Grid.Column="3"/>
-              <Label Content="AchievementId / CriteriaId:" Margin="5" Grid.Row="8" Grid.Column="2"/>
-              <c2:ThreadSafeTextBox x:Name="GemAchievementIdTxt" HorizontalAlignment="Left" Margin="5" Width="150" TextWrapping="NoWrap" Grid.Row="8" Grid.Column="3" IsReadOnly="true"/>
+              <Label Content="Selected Gem:" Margin="5" Grid.Row="3" Grid.Column="2"/>
+              <Label x:Name="SelectedGemIdTxt" Content="0" Margin="5" Grid.Row="3" Grid.Column="3"/>
+              <Button Name="SameGemChangesBtn" Content="Save Gem Changes" Grid.Row="4" Grid.Column="2" Margin="5,10,5,10" IsEnabled="false"/>
+              <Button Name="DuplicateGemBtn" Content="Duplicate to New Gem" Grid.Row="4" Grid.Column="3" Margin="5,10,5,10" IsEnabled="false"/>
+              <Button Name="DeleteGemBtn" Content="Delete Selected Gem" Grid.Row="4" Grid.Column="4" Margin="5,10,5,10" IsEnabled="false"/>
+              <Label Content="Enchantment Name:" Margin="5" Grid.Row="5" Grid.Column="2"/>
+              <c2:ThreadSafeTextBox x:Name="GemEnchantNameTxt" HorizontalAlignment="Left" Margin="5" Width="180" TextWrapping="NoWrap" Grid.Row="5" Grid.Column="3"/>
+              <Label Content="Gem Type:" Margin="5" Grid.Row="6" Grid.Column="2"/>
+              <c2:ThreadSafeComboBox x:Name="GemTypeBox" Margin="5" Width="180" Grid.Row="6" Grid.Column="3" HorizontalAlignment="LEFT" IsEnabled="false"/>
+              <Label Content="Gem Item Id:" Margin="5" Grid.Row="7" Grid.Column="2"/>
+              <c2:ThreadSafeTextBox x:Name="GemItemIdTxt" HorizontalAlignment="Left" Margin="5" Width="180" TextWrapping="NoWrap" Grid.Row="7" Grid.Column="3"/>
+              <Label Content="Trigger Spell:" Margin="5" Grid.Row="8" Grid.Column="2"/>
+              <c2:ThreadSafeTextBox x:Name="GemTriggerSpellTxt" HorizontalAlignment="Left" Margin="5" Width="180" TextWrapping="NoWrap" Grid.Row="8" Grid.Column="3"/>
+              <Label Content="Temp Learn Spell:" Margin="5" Grid.Row="9" Grid.Column="2"/>
+              <c2:ThreadSafeTextBox x:Name="GemTempLearnSpellTxt" HorizontalAlignment="Left" Margin="5" Width="180" TextWrapping="NoWrap" Grid.Row="9" Grid.Column="3"/>
+              <Label Content="SkillDiscovery SpellId:" Margin="5" Grid.Row="10" Grid.Column="2"/>
+              <c2:ThreadSafeTextBox x:Name="SkillDiscSpellIdTxt" HorizontalAlignment="Left" Margin="5" Width="180" TextWrapping="NoWrap" Grid.Row="10" Grid.Column="3" IsReadOnly="true"/>
+              <Label Content="AchievementId / CriteriaId:" Margin="5" Grid.Row="11" Grid.Column="2"/>
+              <c2:ThreadSafeTextBox x:Name="GemAchievementIdTxt" HorizontalAlignment="Left" Margin="5" Width="180" TextWrapping="NoWrap" Grid.Row="11" Grid.Column="3" IsReadOnly="true"/>
             </Grid>
           </TabItem>
         </TabControl>
