Fix long standing bug with the way caster and target aura states were handled

--- a/Documentation/Languages/enUS.xaml
+++ b/Documentation/Languages/enUS.xaml
@@ -660,29 +660,31 @@
         Non-combat Pet |
         Gas Cloud
     </system:String>
-    <system:String x:Key="caster_aura_state_strings">
+    <system:String x:Key="aura_state_strings">
         None |
         Defense |
-        Healthless 20% |
+        Healthless 20 Percent |
         Berserking |
+        Frozen |
         Judgement |
+        Unknown6 |
         Hunter Parry |
-        Victory Rush |
-        Unknown 1 |
-        Healthless 35% |
-        Enrage |
-        Unknown 2 |
-        Health Above 75%
-    </system:String>
-    <system:String x:Key="target_aura_state_strings">
-        None |
-        Healthless 20% |
-        Berserking |
-        Healthless 35% |
+        Unknown8 |
+        Unknown9 |
+        Warrior Victory Rush |
+        Unknown11 |
+        Faerie Fire |
+        Healthless 35 Percent |
         Conflagrate |
         Swiftmend |
         Deadly Poison |
-        Bleeding
+        Enrage |
+        Bleeding |
+        Parry |
+        Unknown20 |
+        Unknown21 |
+        Unknown22 |
+        Health Above 75 Percent
     </system:String>
     <system:String x:Key="equipped_item_inventory_type_mask_strings">
         Non-Equip |
