Implement first proof of concept of OpenAI implementation

--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -1328,6 +1328,11 @@
                     <TextBlock Text="{DynamicResource butLogBook}" VerticalAlignment="Center"/>
                 </StackPanel>
              </Button>
+             <Button Name="OpenAIButton" Click="OpenAIButtonClick">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="OpenAI" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
             <Button Name="TruncateTable" Click="Button_Click">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="{DynamicResource butTruncateTable}" VerticalAlignment="Center"/>
